# db_kukasaataa

./: .gitignore  README.md  pyproject.toml
src/: app.py  data.json
src/services/: avoindata_api_service.py  db_service.py  hankeikkuna_api_service.py
src/utils/: avoindata.py  formatter.py  hankeikkuna.py
